💄 fix: wrap tags and scroll to writing text

--- a/src/style.css
+++ b/src/style.css
@@ -78,3 +78,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.list {
+  display: flex; 
+  flex-wrap: wrap; 
+  justify-content: center
+}
